discussion/kv_engine/175431/175431_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52153: Allow for using Argon2id 1.3

Add support for a new entry in cbsasl.pw:

     "hash": {
         "a": "argon2id",
         "h": "base64 encoded hash of the password",
         "m": memory-cost,
         "p": parallel-cost,
         "s": "base64 encoded salt",
         "t": time-cost
     },

If found SASL will try to use this entry instead of
the entry stored under "plain" when performing SASL
authentication using the PLAIN mechanism.

Change-Id: Ia791f96ccc5ed6baed3f2b35a1ad7b3c4c17006b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-02 11:53:36.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-02 12:33:02.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17906/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/cbcrypto.h:66:42: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
                   const nlohmann::json& properties = {});
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/cbcrypto.h:66:42: note: passing argument to parameter "properties" here
                   const nlohmann::json& properties = {});
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/scram-sha/../cbcrypto.h:66:42: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
                   const nlohmann::json& properties = {});
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/scram-sha/../cbcrypto.h:66:42: note: passing argument to parameter "properties" here
                   const nlohmann::json& properties = {});
                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:166:70: error: too few arguments to function call, expected 4, have 3 [clang-diagnostic-error]
            {reinterpret_cast<const char*>(salt.data()), salt.size()});
                                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/scram-sha/../cbcrypto.h:63:1: note: "pwhash" declared here
std::string pwhash(Algorithm algorithm,
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17906/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/cbcrypto.h:66:42:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17906/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39153/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cbsasl/cbcrypto.h:66:42:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39153/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18935/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18935/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7565/ : FAILURE

Compile error at [2022-06-02T11:55:57.603Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/cbcrypto.h:66:42:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7565/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16957/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46590/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28137/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7669/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19744/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20746/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20089/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
